@@ -58,6 +58,8 @@
   <string name="action_continue">Continue</string>
   <string name="action_open_app_info">Open app info</string>
   <string name="action_set">Set wallpaper</string>
+  <string name="action_set_directly">Set directly</string>
+  <string name="action_open_picker">Open wallpaper picker</string>
   <string name="action_send_feedback">Send feedback</string>
   <string name="action_share">Share</string>
   <string name="action_share_description">Tell your friends about Doodle</string>
@@ -184,7 +186,9 @@
   <string name="msg_force_stop">Forced stop required to apply changes</string>
   <string name="msg_apply_colors">Changed colors will be applied to the system the next time you turn off the screen</string>
   <string name="msg_apply_changes">To apply (eventually) changed options a restart of the running wallpaper service is recommended. This cannot be done automatically.\nPlease force-stop Doodle in your system settings and then apply Doodle as your wallpaper again.</string>
+  <string name="msg_set_wallpaper">If you encounter an issue that breaks wallpaper animation when closing this app, please choose your system\'s wallpaper picker to select Doodle.\nOtherwise you can set it directly.</string>
   <string name="msg_preview_missing">An error occurred, please select Doodle Live Wallpaper manually</string>
+  <string name="msg_picker_missing">Can\'t open wallpaper picker, please install a live wallpaper picker and try it again.</string>
 
   <!-- LICENSES -->
 
